--- a/UltraGCN/config/ultragcn_handm.ini
+++ b/UltraGCN/config/ultragcn_handm.ini
@@ -2,7 +2,7 @@
 
 [Model]
 
-embedding_dim=64
+embedding_dim=32
 
 ii_neighbor_num=10
 model_save_path=./ultragcn_handm.pt
@@ -16,24 +16,28 @@ train_file_path=./data/handm/train.txt
 #need to specify the avaliable gpu index. If gpu is not avaliable, we will use cpu.
 gpu=0
 
-learning_rate=1e-3
+learning_rate=1e-4
 batch_size=1024
-early_stop_epoch=15
+early_stop_epoch=20
 
 
 #L = -(w1 + w2*\beta)) * log(sigmoid(e_u e_i)) - \sum_{N-} (w3 + w4*\beta) * log(sigmoid(e_u e_i'))
-w1=1e-8
+w1=1e-7
 w2=1
-w3=1
-w4=1e-8
+w3=1e-7
+w4=1
 
-negative_num=500
-negative_weight=500
+negative_num=20
+negative_weight=20
 
 #weight of l2 normalization
-gamma=1e-4 
+gamma=5e-5 
 #weight of L_I
-lambda=2.75
+lambda=1e-7
+; #weight of l2 normalization
+; gamma=1e-4 
+; #weight of L_I
+; lambda=1e-5
 
 #whether to sift the pos item when doing negative sampling
 sampling_sift_pos=no
@@ -41,7 +45,7 @@ sampling_sift_pos=no
 
 [Testing]
 #can be customized to your gpu size
-test_batch_size=2048
+test_batch_size=1024
 topk=20
 test_file_path=./data/handm/test.txt
 
